# AI-Harness-Boilerplate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  RUNBOOK.md  docker-compose.yml  spec-harness-README.md
.claude/agents/: architect.md  code-reviewer.md  docs-writer.md  implementer.md  security-reviewer.md
.claude/commands/: sdlc.architecture.md  sdlc.docs.md  sdlc.requirements.md  sdlc.review.md  sdlc.security.md
.claude/rules/: architecture.md  core.md  security.md  testing.md
.run/: dashboard.json
AINative_OKR_Claude_GHCP/: CLAUDE.md  README.md
apps/dashboard/backend/: CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml  start.sh
apps/dashboard/backend/alembic/: env.py
apps/dashboard/backend/alembic/versions/: 0001_initial_schema.py  0002_file_extractions.py  0003_run_model_tokens_drop_tech_stack.py  0004_phase_model_tokens.py  0005_file_extractions_md_doctype.py
apps/dashboard/backend/app/: db.py  db_logger.py  main.py
backend/: CLAUDE.md  Dockerfile  pyproject.toml  start.sh
backend/app/: main.py
docs/: REQUIREMENTS.md  architecture.md  next-steps.md  okr-harness-7-level-report.md  template-overview.md
frontend/: CLAUDE.md  Dockerfile  index.html  package-lock.json  package.json
harness/: README.md
spec-harness/: harness.sdlc.yaml  harness.yaml  pyproject.toml
spec-harness/.github/workflows/: spec-harness.yml
spec-harness/evals/: run_evals.py
spec-harness/evals/cases/todo-cli/: acceptance.yaml  prompt.md
spec-harness/src/spec_harness/: __init__.py  cli.py  config.py  gates.py  orchestrator.py
(+140 files in other folders)
