[project]
name = "spec-harness"
version = "0.1.0"
description = "Closed-loop SDLC harness on top of GitHub spec-kit and Claude Code"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6"]

[project.scripts]
harness = "spec_harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spec_harness"]
