[tool.poetry]
name = "ai-harness-backend"
version = "0.1.0"
description = "FastAPI backend for the AI harness dashboard"
authors = ["AI Harness Team <dev@example.com>"]
readme = "../../../README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "0.115.6"
uvicorn = { version = "0.34.0", extras = ["standard"] }
pydantic = "2.10.4"
python-multipart = "0.0.20"
psycopg2-binary = "2.9.10"
python-dotenv = "1.1.0"
alembic = "^1.13"
sqlalchemy = "^2.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
